    Thanks to Julian Weber for the patch.
  * Be more gender neutral. Closes: #736588
    Thanks to Johannes Schauer for the patch.
  * Multiples updates requested by Cyril Brulebois:
    - drop Joey from d-i coordinators
    - drop Cyril from XSF coordinators
    - mention Steve McIntyre for debian-cd
    - virtualbox-ose-guest-dkms -> virtualbox-guest-dkms
    Closes: #757388
  * Replace some textual references by true <xref>. Closes: #788940
  * Replace incorrect option --log-priority with --log-level for LOG target of
    iptables. Closes: #789285
    Thanks to Ryuunosuke AYANOKOUZI for the patch.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 15 Apr 2015 11:43:32 +0200

debian-handbook (7.20150828) unstable; urgency=medium

  * Fixed small typo in preface of german version. Closes: #792605
    Thanks to Georg Faerber for the patch.
  * Update all PO files so that they work with publican 4.3.2
    from unstable. Closes: #791812

 -- Raphaël Hertzog <hertzog@debian.org>  Fri, 28 Aug 2015 12:22:26 +0200

debian-handbook (7.20150616) unstable; urgency=medium

  * Fix typo OPSF -> OSPF and Traditionnally -> Traditionally.
    Closes: #737255, #737884 Thanks to Anders Jonsson for the patches.
  * Fix typo possibbility -> possibility. Closes: #754481
    Thanks to Julian Weber for the patch.
  * Use same build script as for debian-handbook.info.
  * Include all translations in the package.
  * Update Standards-Version to 3.9.6
  * Save space by dropping useless files. Closes: #672459

 -- Raphaël Hertzog <hertzog@debian.org>  Tue, 16 Jun 2015 18:13:50 +0200

debian-handbook (7.20140126) unstable; urgency=medium

  * Fix typo publicicy -> publicity. Closes: #734883
  * Other misc typo and markup fixes.

 -- Raphaël Hertzog <hertzog@debian.org>  Sun, 26 Jan 2014 21:29:20 +0100

debian-handbook (7.20131230) unstable; urgency=low

  [ Philipp Kern ]
  * Restructure the section about IPv6 and document IPv6 privacy extensions.