@@ -21,10 +21,7 @@ Updates for Jessie
     en-US/09_unix-services.xml            [Roland: done]
     en-US/10_network-infrastructure.xml   [Roland: done]
     en-US/11_network-services.xml         [Roland: done]
-    en-US/12_advanced-administration.xml  [Raphael: todo]
-      - #734397: sidebar: adduser to libvirt group to give libvirt
-	management rights
-      - #757388: virtualbox is in contrib now
+    en-US/12_advanced-administration.xml  [Raphael: done]
     en-US/13_workstation.xml              [Raphael: todo]
       - #757388: chromium is well established now, it's no longer the new
 	kid on the block.
