@@ -21,11 +21,14 @@ debian-handbook (8.20150415) UNRELEASED; urgency=medium
     - drop Cyril from XSF coordinators
     - mention Steve McIntyre for debian-cd
     - virtualbox-ose-guest-dkms -> virtualbox-guest-dkms
+    - virtualbox is now in contrib
     Closes: #757388
   * Replace some textual references by true <xref>. Closes: #788940
   * Replace incorrect option --log-priority with --log-level for LOG target of
     iptables. Closes: #789285
     Thanks to Ryuunosuke AYANOKOUZI for the patch.
+  * Add small tip explaining the possibily to put a user in the libvirt group.
+    Thanks to Paul Chavent for the suggestion. Closes: #734397
 
  -- Raphaël Hertzog <hertzog@debian.org>  Wed, 15 Apr 2015 11:43:32 +0200
 
